--- a/assets/stylefive.css
+++ b/assets/stylefive.css
@@ -14,40 +14,24 @@ a {
 
 body {
   font-family: 'Open Sans', sans-serif;
-  margin: 0;
+  margin:0px;
 }
-
-#background {
-  background: url('background.jpg');
-  background-size: 100% 100%;
-  width: 100%;
-  height: 60%;
-  position: absolute;
-  padding: 0;
-}
-
-#pagename {
-  position: relative;
-  color: #B3DDF2;
-  font-weight: 900;
-  font-size: 70px;
-  text-shadow: -2px 0 black, 0 2px black, 1px 0 black, 0 -1px black;
-  text-align: center;
-  top: 450px;
-}
-
 
 #main-menu .nav-bar {
   list-style:none;
-  margin-top: 20px;
+  margin-top: 0;
   text-align: center;
   position: fixed;
-  margin-left: 64px;
+  background-color: white;
+  padding-top: 20px;
+  padding-left: 113px;
   z-index: 5;
+  top: 0;
 }
 
 #main-menu .nav-bar li {
    display:inline-block;
+   margin-bottom: 25px;
  }
 
 #main-menu .nav-bar li a {
@@ -68,9 +52,28 @@ body {
   margin-left: 80px;
 }
 
-#pageone img {
-  position: relative;
-  height: 100px;
-  top: 482px;
-  left: 256px;
+* {
+  box-sizing: border-box;
+}
+
+.page-container {
+  max-width: 1135px;
+  margin: 0 auto;
+}
+
+
+.gallery-pic-container {
+  width: 30%;
+  height: 200px;
+  border-radius: 10%;
+  overflow: hidden;
+  float: left;
+  padding: 15px 25px;
+}
+
+
+.gallery-pic-container img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
