--- a/assets/stylefive.css
+++ b/assets/stylefive.css
@@ -59,11 +59,13 @@ body {
 .page-container {
   max-width: 1135px;
   margin: 0 auto;
+  /* margin-left: 120px; */
+  margin-top: 70px;
 }
 
 
 .gallery-pic-container {
-  width: 30%;
+  width: 33.33%;
   height: 200px;
   border-radius: 10%;
   overflow: hidden;
@@ -76,4 +78,75 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+#modal-container {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 100;
+  display: none;
+  left: 0;
+  top: 0;
+}
+
+#modal-overlay {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+#modal-box {
+  width: 800px;
+  height: 500px;
+  position: absolute;
+  padding: 20px;
+  top: 50%;
+  left: 50%;
+  top: calc(50% - 250px);
+  left: calc(50% - 400px);
+  z-index: 100;
+}
+
+#modal-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.clear {
+  clear: both;
+}
+
+#carousel-prev {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    left: 60px;
+    top: 50%;
+    margin-top: -30px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    -webkit-transition: all 0.3s;
+}
+
+#carousel-next {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  right: 60px;
+  top: 50%;
+  margin-top: -30px;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 1px solid #fff;
+  -webkit-transition: all 0.3s;
+}
+}
+
+.login::-webkit-input-placeholder  {
+color: white;
 }
