--- a/assets/styletwo.css
+++ b/assets/styletwo.css
@@ -18,7 +18,7 @@ body {
 }
 
 #backgroundtwo {
-  background: url('IMG_8445.jpg');
+  background: url('IMG_8445.JPG');
   background-size: 100% 100%;
   width: 100%;
   height: 100%;
